[workspace]
resolver = "2"
members = [
    "clotributor-apiserver",
    "clotributor-registrar",
    "clotributor-tracker",
]

[workspace.package]
version = "1.0.0"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.90.0"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
config = "0.15.19"
deadpool = "0.12.3"
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
futures = "0.3.31"
graphql_client = { version = "0.14.0", features = ["reqwest"] }
hex = "0.4.3"
http = "1.4.0"
hyper = "1.8.1"
mime = "0.3.17"
mockall = "0.13.1"
mockito = "1.7.1"
openssl = { version = "0.10.75", features = ["vendored"] }
postgres-openssl = "0.5.2"
postgres-types = { version = "0.2.11", features = ["derive"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_qs = "0.15.0"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
time = { version = "0.3.44", features = [
    "formatting",
    "macros",
    "parsing",
    "serde",
] }
tokio = { version = "1.48.0", features = [
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "time",
] }
tokio-postgres = { version = "0.7.15", features = [
    "with-time-0_3",
    "with-serde_json-1",
    "with-uuid-1",
] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.8", features = ["fs", "set-header", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.19.0", features = ["serde"] }
