[package]
name = "clotributor-apiserver"
description = "Server that exposes the CLOTributor HTTP API and serves static assets"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
deadpool-postgres = { workspace = true }
futures = { workspace = true }
mime = { workspace = true }
openssl = { workspace = true }
postgres-openssl = { workspace = true }
serde = { workspace = true }
serde_qs = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
hyper = { workspace = true }
mockall = { workspace = true }
