[package]
name = "clotributor-tracker"
description = "Process that collects and indexes GitHub issues that meet certain criteria"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
deadpool = { workspace = true }
deadpool-postgres = { workspace = true }
futures = { workspace = true }
graphql_client = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
openssl = { workspace = true }
postgres-openssl = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
